--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,26 @@
 .Rhistory
 .RData
 .Ruserdata
+
+## Jupyter ##
+.ipynb_checkpoints/
+*.ipynb
+
+## VIM ##
+# Swap
+[._]*.s[a-v][a-z]
+[._]*.sw[a-p]
+[._]s[a-rt-v][a-z]
+[._]ss[a-gi-z]
+[._]sw[a-p]
+
+# Session
+Session.vim
+
+# Temporary
+.netrwhist
+*~
+# Auto-generated tag files
+tags
+# Persistent undo
+[._]*.un~
