--- a/KDE_package/DESCRIPTION
+++ b/KDE_package/DESCRIPTION
@@ -18,7 +18,9 @@ Authors@R:
               role = c("aut", "cre"))
             )
 Imports:
-  stringr
+  stringr,
+  shiny,
+  cubature
 Suggests: 
     knitr,
     rmarkdown
