usethis::use_testthat()

--- a/KDE_package/DESCRIPTION
+++ b/KDE_package/DESCRIPTION
@@ -26,7 +26,8 @@ Imports:
   rlang
 Suggests: 
     knitr,
-    rmarkdown
+    rmarkdown,
+    testthat
 VignetteBuilder: 
     knitr,
     stringr, 
