re-generate the docs

--- a/KDE_package/NAMESPACE
+++ b/KDE_package/NAMESPACE
@@ -6,12 +6,21 @@ export(L2norm_squared)
 export(bandwidth_selection)
 export(bandwidth_selection_criteria)
 export(convolution)
+export(get_cauchy)
 export(get_criterion_PCO)
+export(get_custom)
+export(get_exponential)
 export(get_kde)
+export(get_laplace)
+export(get_normal)
+export(get_uniform)
 export(helpers)
 export(is_Kernel)
 export(kde)
 export(kernels)
+export(pdf_factories)
+export(pdfs)
 export(rejection_sample)
 export(runExample)
 export(scaled_kernel)
+export(setup_cluster)
