--- a/KDE_package/DESCRIPTION
+++ b/KDE_package/DESCRIPTION
@@ -26,7 +26,7 @@ VignetteBuilder:
     stringr, 
     shiny
 RoxygenNote: 7.1.1
-License: MIT + file LICENSE
+License: usethis::use_mit_license("Charlotte Boys")
 Imports: 
     stringr,
     shiny,
